[gd_scene load_steps=8 format=3 uid="uid://diocnqmhc5hee"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ContainmentContainer/parts/SCPList/SCPListItem/scp_list_item.gd" id="1_3qu5a"]
[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/Buttons/IconBtn/IconBtn.tscn" id="1_fe5mp"]
[ext_resource type="LabelSettings" uid="uid://dnk5qeem6x4ca" path="res://Fonts/game/label_small_black.tres" id="2_71gnb"]
[ext_resource type="Material" uid="uid://bvdd6vxb6n8tc" path="res://Shader/BlackAndWhite/template.tres" id="3_x88dd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4syw7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qq4yo"]
bg_color = Color(0.735099, 0.735099, 0.735098, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vto1j"]

[node name="SCPListItem" type="PanelContainer"]
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_4syw7")
script = ExtResource("1_3qu5a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SelectedIcon" parent="MarginContainer/HBoxContainer2" instance=ExtResource("1_fe5mp")]
layout_mode = 2
icon = 27
active_color = Color(1, 1, 1, 1)
inactive_color = Color(1, 1, 1, 0.384314)
is_hoverable = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qq4yo")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SCP-XXX"
label_settings = ExtResource("2_71gnb")

[node name="DangerLabel" type="Label" parent="MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "UNKNOWN"
label_settings = ExtResource("2_71gnb")

[node name="ItemImage" type="TextureRect" parent="MarginContainer/HBoxContainer2/VBoxContainer"]
material = ExtResource("3_x88dd")
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_vto1j")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer2/VBoxContainer/ItemImage"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NewIcon" parent="MarginContainer/HBoxContainer2/VBoxContainer/ItemImage/MarginContainer" instance=ExtResource("1_fe5mp")]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
icon = 13
is_hoverable = false

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qq4yo")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="MarginContainer/HBoxContainer2/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "STATUS"
label_settings = ExtResource("2_71gnb")
